--- a/pages/3002.html
+++ b/pages/3002.html
@@ -322,13 +322,13 @@ margin-left: 0em;
 
 <h3 id='traditional_magmas_semigroups_groups_rngs'>Traditional (magmas, semigroups, groups, rngs)</h3>
 
-<p>Traditionally, a <strong>homomorphism</strong> between two <a class='existingWikiWord' href='/nlab/show/magma'>magmas</a> <math class='maruku-mathml' display='inline' id='mathml_742caa5b7955f3c12c6e7a4702ab5367acbae909_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_742caa5b7955f3c12c6e7a4702ab5367acbae909_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/function'>function</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_742caa5b7955f3c12c6e7a4702ab5367acbae909_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>
+<p>Traditionally, a <strong>homomorphism</strong> between two <a class='existingWikiWord' href='/nlab/show/magma'>magmas</a> <math class='maruku-mathml' display='inline' id='mathml_080f6652a61c0ee37c7d3477c20376fb6a1c3444_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_080f6652a61c0ee37c7d3477c20376fb6a1c3444_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/function'>function</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_080f6652a61c0ee37c7d3477c20376fb6a1c3444_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>
   \phi\colon A \to B
 
 </annotation></semantics></math></div>
-<p>of the underlying <a class='existingWikiWord' href='/nlab/show/set'>set</a>s that respects the binary operation in that for all <math class='maruku-mathml' display='inline' id='mathml_742caa5b7955f3c12c6e7a4702ab5367acbae909_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>a</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>a</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>a_1, a_2</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_742caa5b7955f3c12c6e7a4702ab5367acbae909_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> we have</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_742caa5b7955f3c12c6e7a4702ab5367acbae909_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo stretchy='false'>(</mo><msub><mi>a</mi> <mn>1</mn></msub><mo>⋅</mo><msub><mi>a</mi> <mn>2</mn></msub><mo stretchy='false'>)</mo><mo>=</mo><mi>ϕ</mi><mo stretchy='false'>(</mo><msub><mi>a</mi> <mn>1</mn></msub><mo stretchy='false'>)</mo><mo>⋅</mo><mi>ϕ</mi><mo stretchy='false'>(</mo><msub><mi>a</mi> <mn>2</mn></msub><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>of the underlying <a class='existingWikiWord' href='/nlab/show/set'>set</a>s that respects the binary operation in that for all <math class='maruku-mathml' display='inline' id='mathml_080f6652a61c0ee37c7d3477c20376fb6a1c3444_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>a</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>a</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>a_1, a_2</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_080f6652a61c0ee37c7d3477c20376fb6a1c3444_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> we have</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_080f6652a61c0ee37c7d3477c20376fb6a1c3444_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo stretchy='false'>(</mo><msub><mi>a</mi> <mn>1</mn></msub><mo>⋅</mo><msub><mi>a</mi> <mn>2</mn></msub><mo stretchy='false'>)</mo><mo>=</mo><mi>ϕ</mi><mo stretchy='false'>(</mo><msub><mi>a</mi> <mn>1</mn></msub><mo stretchy='false'>)</mo><mo>⋅</mo><mi>ϕ</mi><mo stretchy='false'>(</mo><msub><mi>a</mi> <mn>2</mn></msub><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \phi(a_1 \cdot a_2) = \phi(a_1) \cdot \phi(a_2)
   \,.
 
@@ -339,13 +339,13 @@ margin-left: 0em;
 
 <h3 id='identitypreserving_monoids_rings'>Identity-preserving (monoids, rings)</h3>
 
-<p>A <strong>homomorphism</strong> between two <a class='existingWikiWord' href='/nlab/show/monoid'>monoids</a> <math class='maruku-mathml' display='inline' id='mathml_742caa5b7955f3c12c6e7a4702ab5367acbae909_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_742caa5b7955f3c12c6e7a4702ab5367acbae909_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> is a semigroup homomorphism</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_742caa5b7955f3c12c6e7a4702ab5367acbae909_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>
+<p>A <strong>homomorphism</strong> between two <a class='existingWikiWord' href='/nlab/show/monoid'>monoids</a> <math class='maruku-mathml' display='inline' id='mathml_080f6652a61c0ee37c7d3477c20376fb6a1c3444_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_080f6652a61c0ee37c7d3477c20376fb6a1c3444_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> is a semigroup homomorphism</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_080f6652a61c0ee37c7d3477c20376fb6a1c3444_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>
   \phi\colon A \to B
 
 </annotation></semantics></math></div>
 <p>of the underlying <a class='existingWikiWord' href='/nlab/show/semigroup'>semigroup</a>s that preserves <a class='existingWikiWord' href='/nlab/show/identity+element'>identity elements</a> in that we have</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_742caa5b7955f3c12c6e7a4702ab5367acbae909_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo stretchy='false'>(</mo><msub><mn>1</mn> <mi>A</mi></msub><mo stretchy='false'>)</mo><mo>=</mo><msub><mn>1</mn> <mi>B</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_080f6652a61c0ee37c7d3477c20376fb6a1c3444_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo stretchy='false'>(</mo><msub><mn>1</mn> <mi>A</mi></msub><mo stretchy='false'>)</mo><mo>=</mo><msub><mn>1</mn> <mi>B</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \phi(1_A) = 1_B
   \,.
 
@@ -365,13 +365,7 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li>
-<p>homomorphisms are to <a class='existingWikiWord' href='/nlab/show/function'>functions</a> as <a class='existingWikiWord' href='/nlab/show/logical+relation'>logical relations</a> are to <a class='existingWikiWord' href='/nlab/show/relation'>relations</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/heteromorphism'>heteromorphism</a></p>
-</li>
+<li>homomorphisms are to <a class='existingWikiWord' href='/nlab/show/function'>functions</a> as <a class='existingWikiWord' href='/nlab/show/logical+relation'>logical relations</a> are to <a class='existingWikiWord' href='/nlab/show/relation'>relations</a></li>
 </ul>
 
 <p>
@@ -394,14 +388,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 30, 2017 23:43:14 
-  by <a class="existingWikiWord" href="/nlab/show/Samuel+Dobson">Samuel Dobson</a>
-  (203.114.132.147)
+  Revised on January 13, 2018 00:44:34 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (2601:547:500:4fc5:7c4b:dddc:3fb7:a6a5)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/homomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homomorphism/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/homomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/homomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homomorphism/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/homomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
