--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,41 +308,59 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>…</p>
-<div class='maruku-equation'><code class='maruku-mathml'>
-  e^{\big\int}
-
-</code></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6b213f1da58b067bf27eea05c8303d8027bc2551_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>⟨</mo><msubsup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>int</mi> <mrow><msub><mi>a</mi> <mn>1</mn></msub></mrow></msubsup><mo stretchy='false'>(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy='false'>)</mo><msubsup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>int</mi> <mrow><msub><mi>a</mi> <mn>2</mn></msub></mrow></msubsup><mo stretchy='false'>(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy='false'>)</mo><mi>⋯</mi><msubsup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>int</mi> <mrow><msub><mi>a</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub></mrow></msubsup><mo stretchy='false'>(</mo><msub><mi>x</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo stretchy='false'>)</mo><msubsup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>int</mi> <mrow><msub><mi>a</mi> <mi>n</mi></msub></mrow></msubsup><mo stretchy='false'>(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy='false'>)</mo><mo>⟩</mo></mrow><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><munder><mi>lim</mi><munder><mo>⟶</mo><mrow><msub><mi>g</mi> <mi>sw</mi></msub><mo>→</mo><mn>1</mn></mrow></munder></munder><mrow><mo>⟨</mo><msubsup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mrow><mi>int</mi><mo>,</mo><mi>sw</mi></mrow> <mrow><msub><mi>a</mi> <mn>1</mn></msub></mrow></msubsup><mo stretchy='false'>(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy='false'>)</mo><msubsup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mrow><mi>int</mi><mo>,</mo><mi>sw</mi></mrow> <mrow><msub><mi>a</mi> <mn>2</mn></msub></mrow></msubsup><mo stretchy='false'>(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy='false'>)</mo><mi>⋯</mi><msubsup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mrow><mi>int</mi><mo>,</mo><mi>sw</mi></mrow> <mrow><msub><mi>a</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub></mrow></msubsup><mo stretchy='false'>(</mo><msub><mi>x</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo stretchy='false'>)</mo><msubsup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mrow><mi>int</mi><mo>,</mo><mi>sw</mi></mrow> <mrow><msub><mi>a</mi> <mi>n</mi></msub></mrow></msubsup><mo stretchy='false'>(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy='false'>)</mo><mo>⟩</mo></mrow></mrow><annotation encoding='application/x-tex'>
-  e^{\big\int
-  \left\langle
-    \mathbf{\Phi}^{a_1}_{int}(x_1)
-     \mathbf{\Phi}^{a_2}_{int}(x_2)
-      \cdots
-    \mathbf{\Phi}^{a_{n-1}}_{int}(x_{n-1})
-    \mathbf{\Phi}^{a_n}_{int}(x_n)
-   \right\rangle
-   \;\coloneqq\;
-   \underset{\underset{g_{sw} \to 1}{\longrightarrow}}{\lim}
-   \left\langle
-     \mathbf{\Phi}^{a_1}_{int,sw}(x_1)
-     \mathbf{\Phi}^{a_2}_{int,sw}(x_2)
-       \cdots
-     \mathbf{\Phi}^{a_{n-1}}_{int,sw}(x_{n-1})
-     \mathbf{\Phi}^{a_n}_{int,sw}(x_n)
-  \right\rangle
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0573591a7a2d2abf7f52123902008d76cf912e31_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mrow><mtable><mtr><mtd><mtext>would-be</mtext></mtd></mtr> <mtr><mtd><mtext>path integral</mtext></mtd></mtr> <mtr><mtd><mtext>intuition</mtext></mtd></mtr></mtable></mrow></mtd> <mtd><mover><mo>⟶</mo><mrow><mtable><mtr><mtd><mtext>informally</mtext></mtd></mtr> <mtr><mtd><mtext>suggests</mtext></mtd></mtr></mtable></mrow></mover></mtd> <mtd><mrow><mtable><mtr><mtd><mtext>causal additivity</mtext></mtd></mtr> <mtr><mtd><mtext>of the S-matrix</mtext></mtd></mtr></mtable></mrow></mtd> <mtd><mover><mo>⟶</mo><mrow><mtable><mtr><mtd><mtext>rigorously</mtext></mtd></mtr> <mtr><mtd><mtext>implies</mtext></mtd></mtr></mtable></mrow></mover></mtd> <mtd><mrow><mtable><mtr><mtd><mtext>UV-finite</mtext></mtd></mtr> <mtr><mtd><mtext>(i.e. renormalized)</mtext></mtd></mtr> <mtr><mtd><mtext>perturbative QFT</mtext></mtd></mtr></mtable></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \array{
+  \array{
+    \text{would-be}
+    \\
+    \text{path integral}
+    \\
+    \text{intuition}
+  }
+  &amp;
+  \overset{  
+    \array{
+      \text{informally}
+      \\
+      \text{suggests}
+    }
+  }{\longrightarrow}
+  &amp;
+  \array{
+    \text{causal additivity}
+    \\
+    \text{of the S-matrix}
+  }
+  &amp;
+  \overset{
+    \array{
+      \text{rigorously}
+      \\
+      \text{implies}
+    }
+  }{\longrightarrow}
+  &amp;
+  \array{
+    \text{UV-finite}
+    \\
+    \text{(i.e. renormalized)}
+    \\
+    \text{perturbative QFT}
+  }
+  }
 
 </annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on January 13, 2018 12:09:58 
+  Revised on January 13, 2018 13:13:27 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1384" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1384 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1385" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1385 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
