--- a/pages/18934.html
+++ b/pages/18934.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      fields and quanta - table in nLab
+      infraparticle in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      fields and quanta - table
+      infraparticle
   </h1>
 
 
@@ -308,7 +308,14 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='fields_and_quanta'>Fields and quanta</h4>
+
+<div class='hide'>
+<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
 
@@ -446,24 +453,64 @@ margin-left: 0em;
 </li>
 </ul>
 </div>
+</div>
+</div>
+
+<h2 id='related_entries'>Related entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/infrared+divergence'>infrared divergence</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a></p>
+</li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li id='Schroer63'>
+<p><a class='existingWikiWord' href='/nlab/show/Bert+Schroer'>Bert Schroer</a>, <em>Infrateilchen in der Quantenfeldtheorie</em>, Fortschr. Phys. 173 (1963), 1527</p>
+</li>
+
+<li id='Buchholz86'>
+<p><a class='existingWikiWord' href='/nlab/show/Detlev+Buchholz'>Detlev Buchholz</a>, <em>Gauss’ law and the infraparticle problem</em>, Phys. Lett. B 174 (1986), 331</p>
+</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Infraparticle'>Infraparticle</a></em></li>
+</ul>
+
+<p>
+</p>
+
+<p>
+ 
+</p>
+</div>
 
 <div class="revisedby">
-  Revised on January 13, 2018 19:01:35 
+  Created on January 13, 2018 19:01:05 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fields+and+quanta+-+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fields+and+quanta+-+table/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/fields+and+quanta+-+table" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fields+and+quanta+-+table" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/infraparticle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/fields+and+quanta+-+table" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/infraparticle" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/fields+and+quanta+-+table" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/infraparticle" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/fields+and+quanta+-+table" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/infraparticle" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
