--- a/pages/10923.html
+++ b/pages/10923.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,18 +308,18 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>I’m a postdoc in <a href='http://www.uni-math.gwdg.de/rbentma/'>Göttingen</a>. So far, my only contribution to the nlab has been to correct typos and small errors.</p>
+    
 </div>
 
 <div class="revisedby">
-  Revised on July 30, 2014 23:46:57 
+  Revised on January 15, 2018 01:13:48 
   by <a class="existingWikiWord" href="/nlab/show/Rasmus+Bentmann">Rasmus Bentmann</a>
-  (134.76.82.183)
+  (77.178.206.178)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Rasmus+Bentmann" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Rasmus+Bentmann/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Rasmus+Bentmann" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Rasmus+Bentmann" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Rasmus+Bentmann" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Rasmus+Bentmann/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Rasmus+Bentmann" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Rasmus+Bentmann" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
