--- a/pages/18938.html
+++ b/pages/18938.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      idiogravity in nLab
+      empty 165 in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      idiogravity
+      empty 165
   </h1>
 
 
@@ -308,26 +308,26 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>undefined[object Object]undefined</p>
+    
 </div>
 
 <div class="revisedby">
-  Created on January 15, 2018 00:53:55 
-  by <span class="newWikiWord">steven j oscherwitz<a href="/nlab/new/steven+j+oscherwitz">?</a></span>
-  (2601:602:9802:fddc:40d9:6b1c:de97:fc03)
+  Revised on January 15, 2018 04:38:59 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/idiogravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/empty+165" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/empty+165/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/empty+165" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/empty+165" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/idiogravity" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/empty+165" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/idiogravity" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/empty+165" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/idiogravity" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/empty+165" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
