--- a/pages/17975.html
+++ b/pages/17975.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -921,6 +921,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/graviton'>graviton</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/infraparticle'>infraparticle</a></p>
+</li>
 </ul>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
@@ -1126,6 +1130,10 @@ margin-left: 0em;
 <li id='Khoury16'>
 <p><a class='existingWikiWord' href='/nlab/show/Justin+Khoury'>Justin Khoury</a>, <em>Another Path for the Emergence of Modified Galactic Dynamics from Dark Matter Superfluidity</em>, Phys. Rev. D 93, 103533 (2016) (<a href='https://arxiv.org/abs/1602.05961'>arXiv:1602.05961</a>)</p>
 </li>
+
+<li>
+<p>Andrea Addazi, Antonino Marciano, <em>UV completion of a theory of Superfluid Dark Matter</em> (<a href='https://arxiv.org/abs/1801.04083'>arXiv:1801.04083</a>)</p>
+</li>
 </ul>
 
 <h3 id='review'>Review</h3>
@@ -1169,14 +1177,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 27, 2017 08:42:45 
+  Revised on January 15, 2018 10:04:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.234.66)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fuzzy+dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fuzzy+dark+matter/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/fuzzy+dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fuzzy+dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fuzzy+dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fuzzy+dark+matter/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/fuzzy+dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fuzzy+dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
