--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,18 +308,22 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>…</p>
+    <p>We proceed by <a class='existingWikiWord' href='/nlab/show/induction'>induction</a> over the number <math class='maruku-mathml' display='inline' id='mathml_cb2003c1be68b59868e206a5a0149a9de382d8dd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math> of arguments.</p>
+
+<p>For <math class='maruku-mathml' display='inline' id='mathml_cb2003c1be68b59868e206a5a0149a9de382d8dd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>k = 1</annotation></semantics></math> there is nothing to be shown. So assume that the <math class='maruku-mathml' display='inline' id='mathml_cb2003c1be68b59868e206a5a0149a9de382d8dd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Δ</mi> <mi>F</mi></msub></mrow><annotation encoding='application/x-tex'>\Delta_F</annotation></semantics></math>-star product of <math class='maruku-mathml' display='inline' id='mathml_cb2003c1be68b59868e206a5a0149a9de382d8dd_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math> local observables with pairwise disjoint spacetime support exists as a <a class='existingWikiWord' href='/nlab/show/microcausal+polynomial+observable'>microcausal polynomial observable</a> <math class='maruku-mathml' display='inline' id='mathml_cb2003c1be68b59868e206a5a0149a9de382d8dd_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mi>mc</mi></msub><mo>=</mo><msub><mi>A</mi> <mn>1</mn></msub><msub><mo>⋆</mo> <mi>F</mi></msub><mi>⋯</mi><msub><mo>⋆</mo> <mi>F</mi></msub><msub><mi>A</mi> <mi>k</mi></msub></mrow><annotation encoding='application/x-tex'>A_{mc} = A_1 \star_F \cdots \star_F A_k</annotation></semantics></math>. We need to see that for <math class='maruku-mathml' display='inline' id='mathml_cb2003c1be68b59868e206a5a0149a9de382d8dd_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mrow><mi>k</mi><mo>+</mo><mn>1</mn></mrow></msub></mrow><annotation encoding='application/x-tex'>A_{k+1}</annotation></semantics></math> any <a class='existingWikiWord' href='/nlab/show/local+observable'>local observable</a> whose spacetime support is disjoint from that of all of the <math class='maruku-mathml' display='inline' id='mathml_cb2003c1be68b59868e206a5a0149a9de382d8dd_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>A_i</annotation></semantics></math>, hence disjoint from that of <math class='maruku-mathml' display='inline' id='mathml_cb2003c1be68b59868e206a5a0149a9de382d8dd_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mi>mc</mi></msub></mrow><annotation encoding='application/x-tex'>A_{mc}</annotation></semantics></math>, the star product <math class='maruku-mathml' display='inline' id='mathml_cb2003c1be68b59868e206a5a0149a9de382d8dd_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mrow><mi>k</mi><mo>+</mo><mn>1</mn></mrow></msub><msub><mo>⋆</mo> <mi>F</mi></msub><msub><mi>A</mi> <mi>mc</mi></msub></mrow><annotation encoding='application/x-tex'>A_{k+1} \star_F A_{mc}</annotation></semantics></math> exists and is again microcausal.</p>
+
+<p>If $$</p>
 </div>
 
 <div class="revisedby">
-  Revised on January 15, 2018 14:06:27 
+  Revised on January 15, 2018 15:00:47 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (85.195.101.211)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1387" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1387 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1388" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1388 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
